# prowlarr-ui

./: .copier-answers.yml  .gitignore  README.md  cleanup.ps1  main.py  prowlarr_ui.py  prowlarr_ui_config_example.toml  prowlarr_ui_launch.cmd  pyproject.toml  requirements.txt  test_integrations.py  wpythonpip.cmd
config/: app.defaults.toml  app.example.toml
docs/: architecture.md
scripts/windows/: _common.py  run_app.py  run_app_gui.pyw
src/api/: everything_search.py  prowlarr_client.py
src/prowlarr_ui/: __init__.py  __main__.py  app.py  app_menu.py  app_results_context.py  app_results_navigation.py  app_results_rendering.py  app_ui_layout.py  app_window_support.py  constants.py  runtime_paths.py
src/prowlarr_ui/api/: __init__.py  everything_search.py  prowlarr_client.py
src/prowlarr_ui/ui/: __init__.py  help_text.py  log_window.py  setup_wizard.py  widgets.py
src/prowlarr_ui/utils/: config.py  formatters.py  logging_config.py  qt_slots.py  quality_parser.py
src/prowlarr_ui/workers/: __init__.py  download_worker.py  everything_worker.py  init_worker.py  search_worker.py
src/ui/: help_text.py  log_window.py  widgets.py
src/utils/: config.py  formatters.py  logging_config.py  quality_parser.py
src/workers/: download_worker.py  everything_worker.py  search_worker.py
tests/: conftest.py  test_regressions.py  test_threading_guards.py  test_ui_pytestqt.py
tests/gui/: test_ui_pytestqt.py
tests/integration/: README.md  test_integrations.py
tests/ui/: test_ui_pytestqt.py
tests/unit/: test_config_store.py  test_everything_search.py  test_package_import.py  test_regressions.py  test_runtime_paths.py  test_threading_guards.py
