[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prowlarr-ui"
version = "0.1.0"
description = "Windows desktop application for searching Prowlarr indexers with Everything integration."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MT0z", email = "mt0z1@pir0z.yxz" }]
requires-python = ">=3.13"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "colorama>=0.4.6",
  "PySide6>=6.10.2",
  "requests>=2.32.5",
  "tomlkit>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/Threepwood-7/prowlarr-ui"
Repository = "https://github.com/Threepwood-7/prowlarr-ui"
Issues = "https://github.com/Threepwood-7/prowlarr-ui/issues"

[tool.hatch.env]
installer = "uv"

[tool.hatch.build.targets.wheel]
packages = ["src/prowlarr_ui"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-qt>=4.4",
  "PySide6>=6.10.2",
  "qbittorrent-api>=2025.11.1",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/prowlarr_ui --cov-report=term-missing --cov-report=xml {args:tests}"

[tool.hatch.envs.lint]
dependencies = [
  "ruff>=0.6",
  "basedpyright>=1.18",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check ."
fmt = "ruff format --check ."
fix = ["ruff check --fix .", "ruff format ."]
types = "basedpyright src/prowlarr_ui"
policy = "python scripts/policy/check_standard.py"
all = [
  "ruff check --fix .",
  "ruff format .",
  "basedpyright src/prowlarr_ui",
  "python scripts/policy/check_standard.py",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-qt>=4.4",
  "PySide6>=6.10.2",
  "qbittorrent-api>=2025.11.1",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.13"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "B",
  "C4",
  "UP",
  "SIM",
  "TCH",
  "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["prowlarr_ui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["tests", "**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--import-mode=importlib"]
xfail_strict = true

[tool.coverage.run]
source = ["src/prowlarr_ui"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
